Minor RT3 refactors

--- a/examples/sources/rt3.html
+++ b/examples/sources/rt3.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Click | CARTO</title>
+  <title>RT3 Demo | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <!-- Include CARTO VL JS -->
@@ -19,10 +19,10 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Feature click</h1>
+        <h1>RT3 Demo</h1>
       </header>
       <section>
-        <p class="description open-sans">Click on the polygons</p>
+        <p class="description open-sans">Click on the Points</p>
         <div id="controls">
           <div id="content"></div>
         </div>
@@ -43,7 +43,6 @@
       style: carto.basemaps.voyager,
       center: [0, 0],
       zoom: 0,
-      scrollZoom: false,
       dragRotate: false,
       touchZoomRotate: false,
     });
@@ -60,7 +59,7 @@
     });
 
     // Define layer and variables for interactivity
-    const source = new carto.source.RT3('ws://10.0.32.99:3333');
+    const source = new carto.source.RT3('ws://127.0.0.1:3333');
     const viz = new carto.Viz(`
       width: 30
       strokeWidth: 0
