Recenter grid example

--- a/debug/grid.html
+++ b/debug/grid.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Feature Lists</title> | CARTO VL</title>
+  <title>RASTER GRIDS</title> | CARTO VL</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <script src="../dist/carto-vl.js"></script>
@@ -37,8 +37,8 @@
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.voyager,
-      center: [0, 0],
-      zoom: 0,
+      center: [-3.767, 43.463],
+      zoom: 15,
       dragRotate: false
     });
 
