--- a/debug/grid.html
+++ b/debug/grid.html
@@ -22,7 +22,8 @@
 
     #timer {
       position: absolute;
-      top: '20px', left: '20px';
+      top: '20px';
+      left: '20px';
       color: white;
       font-family: Arial;
       font-size: 20pt;
