--- a/debug/grid.html
+++ b/debug/grid.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Feature Lists</title> | CARTO VL</title>
+  <title>Grid | CARTO VL</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <script src="../dist/carto-vl.js"></script>
