Debug test fixes

--- a/debug/grid-color.html
+++ b/debug/grid-color.html
@@ -116,7 +116,8 @@
               data,
               bbox: image.getBoundingBox(),
               width: image.getWidth(),
-              height: image.getHeight()
+              height: image.getHeight(),
+              srid: 3857
             };
 
             source = new carto.source.Grid(grid);
