WIP raster tilt & bearing

--- a/debug/gridtest.html
+++ b/debug/gridtest.html
@@ -60,7 +60,7 @@
       style: carto.basemaps.voyager,
       center: [20, 35],
       zoom: 3,
-      dragRotate: false
+      dragRotate: true
     });
 
     carto.setDefaultAuth({
