--- a/examples/guides/getting-started/step-1.html
+++ b/examples/guides/getting-started/step-1.html
@@ -26,34 +26,12 @@
         // Add basemap and set properties
         const map = new mapboxgl.Map({
             container: 'map',
-            style: carto.basemaps.voyager,
+            style: 'https://basemaps.cartocdn.com/gl/voyager-gl-style/style.json',
             center: [0, 30],
             zoom: 2,
             dragRotate: false,
         });
-
-        //** CARTO VL functionality begins here **//
-
-        // Define the user
-        carto.setDefaultAuth({
-            user: 'cartovl',
-            apiKey: 'default_public'
-        });
-
-        // Define source
-        const source = new carto.source.Dataset('populated_places');
-
-        // Define and style Viz object
-        const viz = new carto.Viz(`
-                color: red
-                width: 10
-            `);
-
-        // Define map layer
-        const layer = new carto.Layer('layer', source, viz);
-
-        // Add map layer
-        layer.addTo(map);
+        map.touchZoomRotate.disableRotation();
 
     </script>
 </body>
