--- a/examples/guides/getting-started/step-1.html
+++ b/examples/guides/getting-started/step-1.html
@@ -15,7 +15,6 @@
             height: 100%;
             width: 100%;
         }
-
     </style>
 </head>
 
@@ -26,7 +25,7 @@
         // Add basemap and set properties
         const map = new mapboxgl.Map({
             container: 'map',
-            style: 'https://basemaps.cartocdn.com/gl/voyager-gl-style/style.json',
+            style: carto.basemaps.voyager,
             center: [0, 30],
             zoom: 2,
             dragRotate: false,
