--- a/examples/guides/getting-started/step-2.html
+++ b/examples/guides/getting-started/step-2.html
@@ -3,7 +3,8 @@
 
 <head>
     <!-- Include CARTO VL JS -->
-    <script src="../../../../dist/carto-vl.js"></script>
+    <script src="../../../dist/carto-vl.js"></script>
+
     <!-- Include Mapbox GL JS -->
     <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
     <!-- Include Mapbox GL CSS -->
@@ -15,7 +16,6 @@
             height: 100%;
             width: 100%;
         }
-
     </style>
 </head>
 
