examples restructuring WIP

--- a/examples/basics/style-layer.html
+++ b/examples/basics/style-layer.html
@@ -24,7 +24,7 @@
         <h1>Style a layer</h1>
       </header>
       <section>
-        <p class="description open-sans">Apply custom styling to a point layer</p>
+        <p class="description toolbox-text">Apply custom styling to a point layer</p>
       </section>
     </div>
   </aside>
@@ -72,8 +72,6 @@
 
     // Add map layer 
     layer.addTo(map, 'watername_ocean');
-
-    
 
   </script>
 
