--- a/examples/basics/add-layer.html
+++ b/examples/basics/add-layer.html
@@ -24,7 +24,7 @@
         <h1>Add layer</h1>
       </header>
       <section>
-        <p class="description open-sans">Add one CARTO layer to your map</p>
+        <p class="description toolbox-text">Add one CARTO layer to your map</p>
       </section>
     </div>
   </aside>
