--- a/examples/sources/mvt-source-layer.html
+++ b/examples/sources/mvt-source-layer.html
@@ -15,7 +15,10 @@
 </head>
 
 <body>
+  <!-- Add map container -->
   <div id="map"></div>
+
+  <!-- Add title/legend box -->
   <aside class="toolbox">
     <div class="box">
       <header>
@@ -24,17 +27,12 @@
       <section>
         <p class="description open-sans">Add one CARTO layer to your map</p>
       </section>
-      <footer class="js-footer"></footer>
     </div>
   </aside>
-  <div id="loader">
-    <div class="CDB-LoaderIcon CDB-LoaderIcon--big">
-      <svg class="CDB-LoaderIcon-spinner" viewBox="0 0 50 50">
-        <circle class="CDB-LoaderIcon-path" cx="25" cy="25" r="20" fill="none"></circle>
-      </svg>
-    </div>
-  </div>
+
   <script>
+
+    // Add basemap and set properties
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.voyager,
@@ -44,6 +42,7 @@
       touchZoomRotate: false,
     });
 
+    // Add zoom controls
     const nav = new mapboxgl.NavigationControl({
       showCompass: false
     });
@@ -90,11 +89,7 @@
       const layer = new carto.Layer('layer', source, viz);
 
       layer.addTo(map, 'watername_ocean');
-      layer.on('loaded', hideLoader);
-
-      function hideLoader() {
-        document.getElementById('loader').style.opacity = '0';
-      }
+    
     }
 
     loadMVT();
