--- a/examples/sources/sql-source-layer.html
+++ b/examples/sources/sql-source-layer.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  
+
  <!-- Add map container -->
   <div id="map"></div>
 
@@ -22,10 +22,10 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>SQL Source layer</h1>
+        <h1>SQL Source Layer</h1>
       </header>
       <section>
-        <p class="description toolbox-text">Define a source layer with SQL</p>
+        <p class="description toolbox-text">Add a CARTO source layer with SQL</p>
       </section>
       <footer class="js-footer"></footer>
     </div>
