--- a/examples/sources/add-multiple-layers.html
+++ b/examples/sources/add-multiple-layers.html
@@ -21,25 +21,26 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Add layer</h1>
+        <h1>Multiple layers</h1>
       </header>
       <section>
-        <p class="description toolbox-text">Add one CARTO layer to your map</p>
+        <p class="description toolbox-text">Add multiple CARTO source layers</p>
       </section>
+      <footer class="js-footer"></footer>
     </div>
   </aside>
-
+  
   <script>
 
     // Add basemap and set properties
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.voyager,
-      center: [0, 30],
-      zoom: 2,
+      center: [0, 43],
+      zoom: 4,
       scrollZoom: false,
       dragRotate: false,
-      touchZoomRotate: false
+      touchZoomRotate: false,
     });
 
     // Add zoom controls
@@ -47,7 +48,7 @@
       showCompass: false
     });
     map.addControl(nav, 'top-left');
-
+    
     //** CARTO VL functionality begins here **//
 
     // Define user
@@ -56,19 +57,34 @@
       apiKey: 'default_public'
     });
 
-    // Define source
-    const source = new carto.source.Dataset('ne_10m_populated_places_simple');
+    // Define first (cities) source with SQL
+    const citiesSource = new carto.source.SQL(`
+      SELECT *
+        FROM ne_10m_populated_places_simple
+        WHERE adm0name IN ('Spain','France','Italy','Switzerland','Portugal')
+    `);
+    // Define cities Viz object
+    const citiesViz = new carto.Viz();
+    // Define cities map layer
+    const citiesLayer = new carto.Layer('citiesLayer', citiesSource, citiesViz);
 
-    // Define Viz object
-    const viz = new carto.Viz();
 
-    // Define map layer
-    const layer = new carto.Layer('layer', source, viz);
+    // Define second (countries) source with SQL
+    const countriesSource = new carto.source.SQL(`
+      SELECT *
+        FROM ne_adm0_europe
+        WHERE admin IN ('Spain','France','Italy','Switzerland','Portugal')
+    `);
+    // Define countries Viz object
+    const countriesViz = new carto.Viz();
+    // Define countries map layer
+    const countriesLayer = new carto.Layer('countriesLayer', countriesSource, countriesViz);
 
-    // Add map layer
-    layer.addTo(map, 'watername_ocean');
+    // Add map layers
+    citiesLayer.addTo(map, 'watername_ocean');
+    countriesLayer.addTo(map, 'citiesLayer');
+  
 
   </script>
-
 </body>
 </html>
