--- a/examples/guides/sources/step-1.html
+++ b/examples/guides/sources/step-1.html
@@ -28,17 +28,16 @@
             container: 'map',
             style: carto.basemaps.voyager,
             center: [0, 30],
-            zoom: 2,
-            scrollZoom: false,
+            zoom: 2
         });
+
         // Add zoom controls
-        const nav = new mapboxgl.NavigationControl({
-            showCompass: false
-        });
+        const nav = new mapboxgl.NavigationControl();
         map.addControl(nav, 'top-left');
 
 
         //** CARTO VL functionality begins here **//
+
 
         // DATASET
         // Define Dataset source with custom credentials
@@ -46,13 +45,16 @@
             user: 'cartovl',
             apiKey: 'default_public'
         });
+
         // Define Viz object with custom style
         const citiesViz = new carto.Viz(`
             color: grey
             width: 4
         `);
+
         // Define map Layer
         const citiesLayer = new carto.Layer('cities', citiesSource, citiesViz);
+
         // Add map Layer
         citiesLayer.addTo(map);
     </script>
