--- a/examples/guides/interactivity/step-2.html
+++ b/examples/guides/interactivity/step-2.html
@@ -27,14 +27,11 @@
             container: 'map',
             style: carto.basemaps.voyager,
             center: [0, 30],
-            zoom: 2,
-            dragRotate: false,
+            zoom: 2
         });
-        map.touchZoomRotate.disableRotation();
+
         // Add zoom controls
-        const nav = new mapboxgl.NavigationControl({
-            showCompass: false
-        });
+        const nav = new mapboxgl.NavigationControl();
         map.addControl(nav, 'top-left');
 
         // MAP EVENTS
